--- a/myproj/myapp/templates/myapp/item_list.html
+++ b/myproj/myapp/templates/myapp/item_list.html
@@ -4,7 +4,9 @@
 <div class="container">
   <div class="row mb-2">
     <div class="col text-right">
+      {% if user.is_authenticated %}
       <a href="{% url 'myapp:item_create' %}" class="btn btn-primary">新規作成</a>
+      {% endif %}
     </div>
   </div>
 </div>
@@ -16,6 +18,7 @@
         Items
       </div>
       <div class="card card-default">
+        {% if user.is_authenticated %}
         <ul class="list-group list-group-flush">
           {% for o in object_list %}
           <li class="list-group-item">
@@ -27,6 +30,7 @@
           </li>
           {% endfor %}
         </ul>
+        {% endif %}
       </div>
       <div class="card-footer text-muted text-center">
         {% if page_obj.has_previous %}
