--- a/myproj/myapp/templates/myapp/item_detail.html
+++ b/myproj/myapp/templates/myapp/item_detail.html
@@ -10,15 +10,33 @@
                     Item
                 </div>
                 <div class="card-content">
-                    {{ object.content|linebreaksbr }}
-                </div>
-                <div class="card-footer">
-                    <a class="btn btn-primary" href="{% url 'myapp:item_update' object.pk %}">修正</a>
-                    <a class="btn btn-danger" href="{% url 'myapp:item_delete' object.pk %}">削除</a>
+                    <div class="row">
+                        <label class="col-md-2 m-1 col-form-label">タイトル</label>
+                        <div class="col-md-8 m-2">
+                            {{item.title}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="col-md-2 m-1 col-form-label">本文</label>
+                        <div class="col-md-8 m-2">
+                            {{item.content}}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="col-md-2 m-1 col-form-label">作成者</label>
+                        <div class="col-md-8 m-2">
+                            {{item.author}}
+                        </div>
+                    </div>
                 </div>
             </div>
-
+            <div class="card-footer">
+                <a class="btn btn-primary" href="{% url 'myapp:item_update' object.pk %}">修正</a>
+                <a class="btn btn-danger" href="{% url 'myapp:item_delete' object.pk %}">削除</a>
+            </div>
         </div>
+
     </div>
+</div>
 </div>
 {% endblock %}
