--- a/myproj/myapp/templates/myapp/base.html
+++ b/myproj/myapp/templates/myapp/base.html
@@ -28,7 +28,10 @@
                         <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/user/logout">Login</a>
+                        <a class="nav-link" href="/user/logout">Sign out</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/password_change">Change password</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
