--- a/myproj/templates/registration/login.html
+++ b/myproj/templates/registration/login.html
@@ -24,5 +24,10 @@
         <button type="submit" class="submit">Login</button>
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
+
+    <div class="mt-3">
+        <a href="/user/password_reset">Reset password</a>
+    </div>
+
 </section>
 {% endblock %}
