--- a/myproj/myapp/templates/myapp/base.html
+++ b/myproj/myapp/templates/myapp/base.html
@@ -23,6 +23,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'myapp:item_list' %}">Item</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'myapp:subitem_list' %}">SubItem</a>
+                    </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
