--- a/myproj/myapp/templates/myapp/index.html
+++ b/myproj/myapp/templates/myapp/index.html
@@ -17,6 +17,11 @@
             <a href="{% url 'myapp:subitem_list' %}">SubItem List</a>
           </li>
         </ul>
+        {% else %}<ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            You have not logged in. <a href="/user/login">Login</a>
+          </li>
+        </ul>
         {% endif %}
       </div>
     </div>
