--- a/myproj/myapp/templates/myapp/subitem_form.html
+++ b/myproj/myapp/templates/myapp/subitem_form.html
@@ -9,14 +9,21 @@
     <form action="{% url 'myapp:subitem_create' %}" method="post">
         {% endif %}
         <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    {% bootstrap_form form layout='horizontal' %}
+            <div class="card card-default">
+                <div class="card-header">
+                    SubItem
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <button class="btn btn-primary">{% if object.pk %}更新{% else %}保存{% endif %}</button>
+                <div class="card-content">
+                    <div class="row">
+                        <div class="col-12">
+                            {% bootstrap_form form layout='horizontal' %}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="offset-md-3">
+                            <button class="btn btn-primary">{% if object.pk %}更新{% else %}保存{% endif %}</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
