--- a/myproj/myapp/templates/myapp/base.html
+++ b/myproj/myapp/templates/myapp/base.html
@@ -20,13 +20,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navmenu1">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'myapp:item_list' %}">Item</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'myapp:subitem_list' %}">SubItem</a>
-                    </li>
                     {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'myapp:item_list' %}">Item List</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'myapp:item_list' %}">Item Search</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'myapp:subitem_list' %}">SubItem List</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
                     </li>
